# loanchatbot

./: README.md  render.yaml
backend/: .gitignore  conftest.py  pyproject.toml  requirements.txt
backend/app/: dependencies.py  main.py
backend/app/agents/: chat_agent.py  credit_agent.py  kyc_agent.py  master_agent.py  sales_agent.py  sanction_agent.py
backend/app/api/: chat_routes.py  loan_routes.py
backend/app/core/: logger.py
backend/app/schemas/: api_response.py
backend/app/services/: credit_score_service.py  crm_service.py  llm_service.py  session_store.py
backend/app/static/outputs/: sanction_078a98d2-b011-4a6b-a549-3f6a08a0020f.txt  sanction_2e6b509e-1c2f-4891-89c8-803829e8ee11.txt  sanction_355efdb2-6781-4f0b-95d9-c39ba1b11f2e.txt  sanction_77ef4d02-210a-4a02-ac94-90cb100c892c.txt  sanction_b3b8059e-ca42-4a9f-bc87-357d5c6621a7.txt  sanction_bb47d95f-bc04-48f1-b9c0-46268f4b92a3.txt  sanction_c7a76f92-670c-4d10-bfb3-a2a082294e24.txt  sanction_c9f01e81-cc9f-4744-8432-56ae594dabdb.txt  sanction_d95b99be-a956-4cad-a987-5762fd0f9ace.txt
backend/tests/: test_api_apply_loan.py  test_credit_agent.py  test_kyc_agent.py  test_master_agent.py  test_sales_agent.py  test_sanction_agent.py
docs/: credit_agent_workflow.md  kyc_agent_workflow.md  sales_agent_workflow.md  sanction_agent_workflow.md
frontend/: .env.production
frontend/src/: App.css  App.jsx  index.css
