[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.1.3",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.6",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
